force-app/main/default/objects/SVMXC__Service_Request__c/fields/SVMXC__Account__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Name</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>