force-app/main/default/objects/SVMXC__Service_Request__c/fields/SVMXC__Closed_On__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Closed_On__c</fullName>
    <description>Closed Date and Time</description>
    <label>Closed On</label>
    <type>DateTime</type>
</CustomField>