force-app/main/default/objects/SVMXC__Service_Request__c/fields/SVMXC__Subject__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Subject__c</fullName>
    <description>Subject of the service request</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>